--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,8 +1,15 @@
 {
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.560.0",
     "next": "16.0.8",
+    "next-themes": "^0.4.6",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@better-auth-playground/biome-config": "workspace:*",
@@ -13,16 +20,17 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
   "name": "@better-auth-playground/web",
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
     "format": "biome format --write",
     "lint": "biome check",
-    "start": "next start"
+    "start": "next start",
+    "start:dev": "next dev"
   },
   "version": "1.0.0"
 }
