--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
