--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://turborepo.com/schema.json",
+  "globalDependencies": [".env*"],
   "tasks": {
     "//#format-and-lint": {},
     "//#format-and-lint:fix": {
