--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,6 +1,9 @@
 # Node
 NODE_ENV="your-node_env"
 
+# Database
+DATABASE_URL=your-database_url
+
 # Better Auth
 BETTER_AUTH_SECRET="your-better_auth_secret"
 BETTER_AUTH_URL="your-better_auth_url"
