--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,18 +1,27 @@
 {
   "dependencies": {
     "@better-auth-playground/db": "workspace:*",
+    "@hookform/resolvers": "^5.2.2",
+    "@next-safe-action/adapter-react-hook-form": "^2.0.0",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-core": "^0.13.10",
     "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.560.0",
     "next": "16.0.10",
+    "next-safe-action": "^8.0.11",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-hook-form": "^7.70.0",
     "react-use": "^17.6.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.0"
   },
