--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -33,7 +33,9 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "start:dev": "pnpm run db:studio"
   },
   "version": "1.0.0"
 }
+
