--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "dotenv-cli": "^11.0.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
@@ -42,10 +43,12 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "env:load": "dotenv -e ../../.env --",
     "format": "biome format --write",
     "lint": "biome check",
     "start": "next start",
-    "start:dev": "next dev"
+    "start:dev": "pnpm run env:load next dev"
   },
   "version": "1.0.0"
 }
+
