--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,6 +14,7 @@
     "@better-auth-playground/typescript-config": "workspace:*",
     "@biomejs/biome": "^2.3.9",
     "@types/node": "^20.19.26",
+    "dotenv-cli": "^11.0.0",
     "drizzle-kit": "^0.31.8",
     "drizzle-seed": "^0.3.1",
     "tsup": "^8.5.1",
@@ -34,7 +35,8 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "start:dev": "pnpm run db:studio"
+    "env:load": "dotenv -e ../../.env --",
+    "start:dev": "pnpm run env:load pnpm run db:studio"
   },
   "version": "1.0.0"
 }
