🔧 chore(biome): atualizar versão do Biome para 2.3.9
- Atualiza o esquema do Biome para a versão 2.3.9 em todos os arquivos de configuração.
- Ajusta as dependências e configurações relacionadas.

--- a/configs/biome-config/package.json
+++ b/configs/biome-config/package.json
@@ -1,9 +1,17 @@
 {
+  "devDependencies": {
+    "@biomejs/biome": "^2.3.9"
+  },
+  "exports": {
+    "./base": "./base.json",
+    "./nextjs": "./nextjs.json"
+  },
   "license": "MIT",
   "name": "@better-auth-playground/biome-config",
   "private": true,
   "publishConfig": {
     "access": "public"
   },
+  "type": "module",
   "version": "1.0.0"
 }
