--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@
 NODE_ENV="your-node_env"
 
 # Database
-DATABASE_URL=your-database_url
+DATABASE_URL="your-database_url"
+# DATABASE_URL=your-# database_url
 
 # Better Auth
 BETTER_AUTH_SECRET="your-better_auth_secret"
