--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,8 +27,8 @@
     "zod": "^4.2.0"
   },
   "devDependencies": {
-    "@better-auth-playground/biome-config": "workspace:*",
     "@better-auth-playground/typescript-config": "workspace:*",
+    "@biomejs/biome": "2.3.11",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -51,4 +51,3 @@
   },
   "version": "1.0.0"
 }
-
