--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "url": "https://github.com/DevPedroHB"
   },
   "devDependencies": {
-    "turbo": "^2.6.3",
-    "typescript": "5.9.2"
+    "@biomejs/biome": "^2.3.9",
+    "turbo": "^2.7.4",
+    "typescript": "5.9.3"
   },
   "engines": {
     "node": ">=24"
